# lupus-singlecell-foundation

./: .gitignore  FINAL_REMAINING_TASK.md  PROJECT_STATUS.md  PROJECT_SUMMARY.md  README.md  pyproject.toml  requirements_phase1.txt
artifacts/: step7_manifest.json
configs/: baseline_modeling.yaml  calibration.yaml  cell_type_proportion_baseline.yaml  data_audit.yaml  data_pipeline.yaml  evaluation.yaml  logistic_regression_baseline.yaml  pseudobulk.yaml  qc.yaml  splitting.yaml  tree_baseline.yaml
docs/: 00_master_spec.md  01_scientific_hypothesis.md  02_dataset_feasibility_audit.md  06_data_pipeline_plan.md  07_prediction_task_plan.md  08_baseline_modeling_plan.md  09_dataset_label_verification_plan.md  10_dataset_selection_and_label_verification.md  11_patient_id_label_provenance_evidence_plan.md  12_controlled_metadata_inspection_plan.md
metadata/: anndata_schema.yaml  cellxgene_candidate_schema.yaml  cohort_manifest.csv  cohort_manifest_schema.yaml  dataset_access_plan.yaml  dataset_catalog.csv  dataset_eligibility_scoring.yaml  dataset_label_verification_schema.yaml  external_validation_criteria.yaml  gene_identifier_policy.yaml  geo_candidate_schema.yaml  label_availability_schema.yaml  label_dictionary.yaml  metadata_harmonization_schema.yaml  patient_metadata_schema.yaml  prediction_task_schema.yaml  pseudobulk_feature_schema.yaml  source_field_mapping.yaml
notebooks/: phase1_kaggle.ipynb  phase3_kaggle.ipynb
reports/: final_dataset_feasibility_report.md
scripts/: 00_audit_datasets.py  01_geo_metadata_search_plan.py  02_cellxgene_metadata_plan.py  (+29 more)
(+408 files in other folders)
