[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "lupus-singlecell-foundation"
version = "0.1.0"
description = "Reproducible utilities for lupus single-cell foundation-model benchmarking."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]
include = ["lupusfm*"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
